# algotrader

./: .pylintrc  Application.py  DataCenter.py  README.md  Setup.py  algorithmic_trader.py  algotrader.py  application.py  application_async.py  backtest.py  candle.py  config.ini  configs.py  exchange.py  helper.py  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  startup.py  startup_async.py  strategy.py  test.py  test.txt  test_async.py  utils.py
CommonModels/: DataModels.py
ExchangeCollection/: ExchangeBase.py  ExchangeFactory  FTX.py
ExchangeCollection/ExchangeLibrary/: FTX.py
ExchangeLibrary/: ExchangeBase.py  IExchangeBase.py
IndicatorLibrary/: IndicatorHandler.py  candle.py
common_models/: exchange_info.py  exchange_type.py  sorting_option.py  strategy_response.py  time_models.py
common_models/data_models/: candle.py
data_center/: DataCenter.py  async_data_center.py  data_center.py  market_data_center.py
data_center/jobs/: technical_indicator.py
data_center/jobs/technical_indicators/: ema.py  sma.py
data_provider/exchange_collection/: exchange.py  exchange_base.py  exchange_factory.py
data_provider/exchange_collection/exchange_library/: Binance.py  FTX.py  binance_spot.py
data_provider/exchange_collection/exchange_library/binance/: binance_base.py
data_provider/exchange_collection/exchange_library/binance/future/: binance_future.py
data_provider/exchange_collection/exchange_library/binance/futures/: binance_futures.py
data_provider/exchange_collection/exchange_library/binance/spot/: binance_spot.py
data_provider/websocket/: websocket_base.py
data_provider/websocket_manager/: websocket_manager.py
domains/: __init__.py
domains/backtesting/: __init__.py  simulation_engine.py
domains/market_data/: __init__.py
domains/risk_management/: __init__.py
domains/strategy_engine/: __init__.py
domains/strategy_engine/strategies/: base_strategy.py  moving_average_crossover.py
domains/trading/: __init__.py
domains/trading/exchanges/: base_exchange.py  simulation_exchange.py
exchange_collection/: exchange_base.py  exchange_factory.py
exchange_collection/exchange_library/: FTX.py
managers/: archive_manager.py  async_archive_manager.py  config_manager.py  health_manager.py  log_manager.py  service_manager.py  technical_indicators.py  websocket_manager.py
models/: exchange_info.py  sorting_option.py  time_models.py
models/data_models/: candle.py
modules/archive/: __init__.py  archive_manager.py
modules/config/: __init__.py  async_config_manager.py  config.py  config_manager.py  config_validator.py  health_manager.py
modules/data/: candle.py
modules/data_center/: __init__.py  data_center.py  symbol_collection.py
modules/exchange/: __init__.py  async_binance_exchange.py  async_exchange.py  async_exchange_factory.py  backfill_exchange.py  exchange.py  exchange_base.py  exchange_factory.py  exchange_interface.py  exchange_websocket.py
modules/exchange/exchange_library/: binance_spot.py
modules/exchange/exchange_library/binance/: __init__.py  binance.py  binance_ws.py
modules/indicator/: __init__.py  base.py  ema.py  indicator_factory.py  indicator_manager.py  parabolic_sar.py  sma.py
modules/log/: __init__.py  log_manager.py
modules/model/: candle.py  exchange_info.py
modules/strategy/: __init__.py  strategy.py  strategy_center.py  technical_indicators.py
modules/trading/: strategy_factory.py  trading_engine.py
modules/trading/account/: position.py  position_type.py
modules/trading/strategy/: parabolic_sar_strategy.py  strategy.py  strategy_response.py
modules/websocket/: async_websocket_manager.py  websocket_manager.py
scripts/: binance_data_ingestor.py
simulation_results/BTCUSDT_1h_20200101_20250101/: ParabolicSAR_0.02_0.2_acceleration_0.02_maximum_0.2_20251101_203547_data.json  ParabolicSAR_0.02_0.2_acceleration_0.02_maximum_0.2_20251101_203547_report.txt  ParabolicSAR_0.02_0.2_acceleration_0.02_maximum_0.2_20251101_205335_data.json  ParabolicSAR_0.02_0.2_acceleration_0.02_maximum_0.2_20251101_205335_report.txt  ParabolicSAR_0.02_0.2_acceleration_0.02_maximum_0.2_20251101_205355_data.json  ParabolicSAR_0.02_0.2_acceleration_0.02_maximum_0.2_20251101_205355_report.txt  ParabolicSAR_0.02_0.2_acceleration_0.02_maximum_0.2_20251101_205702_data.json  ParabolicSAR_0.02_0.2_acceleration_0.02_maximum_0.2_20251101_205702_report.txt  ParabolicSAR_0.02_0.2_acceleration_0.02_maximum_0.2_20251101_210024_data.json  ParabolicSAR_0.02_0.2_acceleration_0.02_maximum_0.2_20251101_210024_report.txt  ParabolicSAR_0.02_0.2_acceleration_0.02_maximum_0.2_20251101_213747_data.json  ParabolicSAR_0.02_0.2_acceleration_0.02_maximum_0.2_20251101_213747_report.txt
simulation_results/BTCUSDT_1m_20200101_20250101/: ParabolicSAR_0.02_0.2_acceleration_0.02_maximum_0.2_20251101_213717_data.json  ParabolicSAR_0.02_0.2_acceleration_0.02_maximum_0.2_20251101_213717_report.txt
simulation_results/BTCUSDT_1m_20240101_20250101/: ParabolicSAR_0.02_0.2_acceleration_0.02_maximum_0.2_20251101_213627_data.json  ParabolicSAR_0.02_0.2_acceleration_0.02_maximum_0.2_20251101_213627_report.txt
simulations/: __init__.py  config.py  engine.py  example_simulation.py  parabolic_sar_simulation.py  performance.py  portfolio.py  quick_psar_test.py  quick_start.py
strategy_provider/: strategy_center.py
tests/: playground.py  test_candle.py  test_dependency_injection_container.py  test_di_container.py  test_ema.py  test_parabolic_sar.py  test_simulation.py  test_simulation_engine.py  test_sma.py
tests/data_provider/: exchange_test.py  websocket.py  websocket_test.py
utils/: dependency_injection_container.py  di_container.py  graceful_shutdown.py  service_initializer.py  signal_handler.py
utils/config_manager/: config_manager.py
utils/singleton_metaclass/: singleton.py
utils/websocket_manager/: websocket_manager.py
