[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "algotrader"
version = "0.1.0"
description = "Algorithmic trading application"
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
# pip install -r requirements.txt -r requirements-dev.txt (preferred)
# or: pip install .[dev]
dev = [
  "black",
  "ruff",
  "mypy",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "isort",
  "taskipy",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = false
warn_unused_ignores = true
warn_redundant_casts = true

# npm-like scripts via Taskipy: `task <name>`
[tool.taskipy.tasks]
# App
dev = "python application_async.py"
prod = "PYTHONUNBUFFERED=1 python -O application_async.py"

# Services (websocket etc.)
start_ws = "python -c \"import asyncio; import startup_async; asyncio.run(startup_async.inject_services())\""
stop_ws = "python -c \"import asyncio; import startup_async; asyncio.run(startup_async.shutdown_all_services())\""

# Tests
test = "pytest -v"
test_all = "pytest tests/ -v"
test_di = "pytest tests/test_di_container.py -v"
test_candle = "pytest tests/test_candle.py -v"
cov = "pytest --cov=. --cov-report=term-missing"

# Quality
lint = "ruff check ."
fmt = "black . && isort ."
fmt_check = "black --check . && isort --check-only ."
typecheck = "mypy ."

# Env / housekeeping
deps_dev = "pip install -r requirements.txt -r requirements-dev.txt || pip install .[dev]"
clean = "find . -type d -name __pycache__ -exec rm -rf {} +; rm -rf .pytest_cache .mypy_cache .ruff_cache build dist" 