[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "algotrader"
version = "0.1.0"
description = "Algorithmic trading application with support for multiple exchanges, technical indicators, and machine learning models"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = [
    "algorithmic-trading",
    "trading-bot",
    "cryptocurrency",
    "binance",
    "technical-analysis",
    "machine-learning",
    "backtesting",
    "financial-data",
    "trading-strategies",
    "python"
]
authors = [
    {name = "AlgoTrader Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core dependencies
    "configparser>=5.0.0",
    "typing-extensions>=4.5.0",
    
    # Logging and monitoring
    "structlog>=23.0.0",
    
    # Data processing
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    
    # WebSocket and HTTP
    "websockets>=11.0.0",
    "aiohttp>=3.8.0",
    "requests>=2.31.0",
    "aiofiles>=23.0.0",
]

[tool.setuptools.packages.find]
include = ["modules*", "models*", "domains*", "data_center*", "utils*"]

[tool.setuptools.package-data]
"*" = ["*.ini", "*.toml", "*.md"]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    
    # Code quality and formatting
    "black>=24.0.0",
    "ruff>=0.4.0",
    "mypy>=1.8.0",
    "isort>=5.13.0",
    "flake8>=6.0.0",
    
    # Development tools
    "pre-commit>=3.0.0",
    "taskipy>=1.12.0",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = false
warn_unused_ignores = true
warn_redundant_casts = true

# npm-like scripts via Taskipy: `task <name>`
[tool.taskipy.tasks]
# App
dev = "python algorithmic_trader.py"
prod = "PYTHONUNBUFFERED=1 python -O algorithmic_trader.py"

# Services (websocket etc.)
start_ws = "python -c \"import asyncio; import startup; asyncio.run(startup.inject_services())\""
stop_ws = "python -c \"import asyncio; import startup; asyncio.run(startup.shutdown_all_services())\""

# Data ingestion
ingest_binance = "python scripts/binance_data_ingestor.py"

# Tests
test = "pytest -v"
test_all = "pytest tests/ -v"
test_di = "pytest tests/test_di_container.py -v"
test_candle = "pytest tests/test_candle.py -v"
test_ema = "pytest tests/test_ema.py -v"
test_sma = "pytest tests/test_sma.py -v"
test_simulation = "pytest tests/test_simulation_engine.py -v"
cov = "pytest --cov=. --cov-report=term-missing"

# Quality
lint = "ruff check ."
fmt = "black . && isort ."
fmt_check = "black --check . && isort --check-only ."
typecheck = "mypy ."

# Env / housekeeping
deps_dev = "pip install -e .[dev]"
clean = "find . -type d -name __pycache__ -exec rm -rf {} +; rm -rf .pytest_cache .mypy_cache .ruff_cache build dist"
clean_all = "task clean && rm -rf temp_downloads archive .cache" 